# kavm-demo

./: .envrc  README.md  demo.md  flake.nix  live-demo-scratch.md  pyproject.toml  usage.md
json-test-case-example/: application-id.json
kavm_demo/: __main__.py  client.py  conftest.py  contract.py  test_contract.py
kcoin_vault/: __main__.py  client.py  conftest.py  kcoin_vault_beaker.py  kcoin_vault_beaker_client.py  kcoin_vault_beaker_fixed.py  kcoin_vault_pyteal.py  kcoin_vault_pyteal_fixed.py  sandbox.py  test_beaker.py  test_method_sequence.py  test_mint_burn.py  test_mint_burn_refined.py
