[tool.poetry]
name = "kavm-demo"
version = "0.1.0"
description = ""
authors = ["Runtime Verification Inc. <contact@runtimeverification.com>"]
readme = "README.md"
packages = [{include = "kcoin_vault"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
hypothesis = "^6.58.0"
py-algorand-sdk = "^1.20.1"
pyteal = "^0.20.1"
# kavm = { path = "./avm-semantics/kavm", develop = false }


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
interact = 'kcoin_vault.__main__:interact'
prop-test = 'kcoin_vault.__main__:run_prop_test'
